updates content. removes old files.

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                 <img id="image-check-authorities" src="assets/exports/check-authorities.png" alt="" />
                 <p>
                   <span class="text-break text-blue-dark"><strong>Check</strong></span>
-                  <span class="text-break"><a href="#">what public health authorities</a></span>
-                  <span class="text-break">and <a href="#">government</a> are saying.</span>
+                  <span class="text-break"><a href="https://www.canada.ca/en/public-health.html">what public health authorities</a></span>
+                  <span class="text-break">and <a href="https://www.canada.ca/en/public-health/services/diseases/coronavirus-disease-covid-19.html">government</a> are saying.</span>
                 </p>
                 <img id="image-blue-arrow" src="assets/exports/blue-arrow.png" alt="" />
               </li>
@@ -173,7 +173,7 @@
           </p>
         </div>
         <div class="component__block component__block--50">
-          <h3>
+          <h3 class="h3">
             Help us spread the word!
           </h3>
           <p>
@@ -182,7 +182,7 @@
           </p>
         </div>
         <div class="component__block  component__block--50">
-          <h3>
+          <h3 class="h3">
             <span class="text-break">Are you a content creator?</span>
             <span class="text-break">Download the share button and use it on your site</span>
           </h3>
@@ -257,26 +257,110 @@
             </label>
             <div class="toggle__container">
               <p>
-                With important issues like healthcare, employment and the
-                economy, you may be wondering why your social media habits are
-                so important. Does it really matter if you share something that
-                turns out to be not true?
+                Keeping a running list of the sources you can and can't trust
+                just isn't practical or effective.
               </p>
-              <p>
-                It does. A lot.
-              </p>
-              <p>
-                Sharing bad information about health issues may lead others to
-                do things that can cause real harm. People have died from taking
-                things they were told were cures for COVID-19. 
-              </p>
-              <p>
-                Not all incorrect info is dangerous, but it creates clutter and
-                makes it more diﬃcult for the good stuﬀ to get through.
-              </p>
-              <p>
-                Your health, and the health of those you care about, matters.
-              </p>
+              <h4 class="h4">
+                When it comes to info about COVID-19:
+              </h4>
+              <ul class="list list--bullet">
+                <li>
+                  <p>
+                    Trust info from official government sites like
+                    <a class="text-white" href="https://www.canada.ca/en/public-health/services/diseases/coronavirus-disease-covid-19.html">canada.ca/coronavirus</a>.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Trust info from public health agencies, including the <a
+                    class="text-white"
+                    href="https://www.canada.ca/en/public-health.html">Public
+                    Health Agency of Canada</a>, your municipal health agency,
+                    or your province or territory’s public health agency:
+                  </p>
+                  <ul class="list list--bullet">
+                    <li>
+                      <a class="text-white" href="https://www.canada.ca/en/public-health.html">
+                        Public Health Agency of Canada
+                      </a>
+                    </li>
+                    <li>
+                      <a class="text-white" href="https://www.alberta.ca/office-of-the-chief-medical-officer-of-health.aspx">
+                        Alberta Chief Medical Oﬃcer
+                      </a>
+                    </li>
+                    <li>
+                      <a class="text-white" href="http://covid-19.bccdc.ca/">
+                        British Columbia Centre for Disease Control
+                      </a>
+                    </li>
+                    <li>
+                      <a class="text-white" href="https://www.gov.mb.ca/covid19/index.html">
+                        Manitoba COVID-19 page
+                      </a>
+                    </li>
+                    <li>
+                      <a class="text-white" href="https://www2.gnb.ca/content/gnb/en/departments/ocmoh.html">
+                        New Brunswick Chief Medical Oﬃcer of Public Health
+                      </a>
+                    </li>
+                    <li>
+                      <a class="text-white" href="https://www.gov.nl.ca/covid-19/">
+                        Newfoundland and Labrador COVID-19 page
+                      </a>
+                    </li>
+                    <li>
+                      <a class="text-white" href="https://novascotia.ca/coronavirus/">
+                        Nova Scotia COVID-19 page
+                      </a>
+                    </li>
+                    <li>
+                      <a class="text-white" href="https://www.hss.gov.nt.ca/en">
+                        Northwest Territories Health and Social Services
+                      </a>
+                    </li>
+                    <li>
+                      <a class="text-white" href="https://www.gov.nu.ca/health">
+                        Nunavut Department of Health
+                      </a>
+                    </li>
+                    <li>
+                      <a class="text-white" href="https://www.publichealthontario.ca/">
+                        Public Health Ontario
+                      </a>
+                    </li>
+                    <li>
+                      <a class="text-white" href="https://www.princeedwardisland.ca/en/topic/covid-19">
+                        Prince Edward Island COVID-19 page
+                      </a>
+                    </li>
+                    <li>
+                      <a class="text-white" href="https://www.quebec.ca/en/health/">
+                        Quebec Health
+                      </a>
+                    </li>
+                    <li>
+                      <a class="text-white" href="https://www.saskatchewan.ca/government/health-care-administration-and-provider-resources/treatment-procedures-and-guidelines/emerging-public-health-issues/2019-novel-coronavirus">
+                        Saskatchewan COVID-19 page
+                      </a>
+                    </li>
+                    <li>
+                      <a class="text-white" href="https://yukon.ca/en/health-and-wellness">
+                        Yukon Health and Wellness
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <p>
+                    Reputable news sources are almost always reliable, but take
+                    the time to confirm the story is accurate by checking other
+                    sources. Visit <a class="text-white"
+                    href="http://www.breakthefake.ca/">breakthefake.ca</a> to
+                    find out how.
+                  </p>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="accordian-list__item">
@@ -294,27 +378,73 @@
               <span class="toggle__icon"></span>
             </label>
             <div class="toggle__container">
-              <p>
-                With important issues like healthcare, employment and the
-                economy, you may be wondering why your social media habits are
-                so important. Does it really matter if you share something that
-                turns out to be not true?
-              </p>
-              <p>
-                It does. A lot.
-              </p>
-              <p>
-                Sharing bad information about health issues may lead others to
-                do things that can cause real harm. People have died from taking
-                things they were told were cures for COVID-19. 
-              </p>
-              <p>
-                Not all incorrect info is dangerous, but it creates clutter and
-                makes it more diﬃcult for the good stuﬀ to get through.
-              </p>
-              <p>
-                Your health, and the health of those you care about, matters.
-              </p>
+              <h4 class="h3">
+                Before you decide whether or not to respond to bad information,
+                think about the following:
+              </h4>
+              <dl>
+                <dt class="h4">
+                  How dangerous is the info?
+                </dt>
+                <dd>
+                  All misinformation does harm on some level, but some things - like
+                  telling people to take unproven cures or ignore public health
+                  advice - is especially dangerous.
+                </dd>
+                <dt class="h4">
+                  Is this person likely to convince their audience?
+                </dt>
+                <dd>
+                  If they seem to have inﬂuence or if they’re someone that others
+                  are likely to listen to (politician, celebrity, family member),
+                  it’s pretty important for you to push back.
+                </dd>
+                <dt class="h4">
+                  How big is the person’s audience?
+                </dt>
+                <dd>
+                  It’s not the best idea to draw attention to a false statement
+                  that few would see anyway. If their audience is a lot smaller
+                  than the audience who would see your reply, you might be
+                  better oﬀ ignoring it, or telling them in private.
+                </dd>
+                <dt class="h4">
+                  What’s your relationship to the person?
+                </dt>
+                <dd>
+                  If someone you care about is sharing false info, you probably want to let them know.
+
+                  <h4 class="h4">
+                    Here’s how to do it:
+                  </h4>
+                  <ul class="list list--bullet">
+                    <li>
+                      <p>
+                        Don’t just call them out for being wrong (that can be a
+                        little embarrassing for them). Instead, help them by
+                        sharing good information from a reliable source.
+                      </p>
+                    </li>
+                    <li>
+                      <p>
+                        Focus on the values you have in common. No one wants to
+                        cause harm. Saying, “We all care about keeping people as
+                        safe as we can” is a great way to start.
+                      </p>
+                    </li>
+                    <li>
+                      <p>
+                        Ask leading questions to show how unlikely the bad info
+                        is. “If there really was a cure, why wouldn’t news
+                        outlets be covering such big news? If there is some kind
+                        of conspiracy, could every government in the world
+                        really be part of it?” are the type of questions that
+                        can help.
+                      </p>
+                    </li>
+                  </ul>
+                </dd>
+              </dl>
             </div>
           </li>
           <li class="accordian-list__item">
@@ -332,26 +462,25 @@
               <span class="toggle__icon"></span>
             </label>
             <div class="toggle__container">
+              <blockquote>
+                Why did the advice change about wearing masks?
+              </blockquote>
+              <blockquote>
+                If they’re the experts, why are they changing their mind on
+                important information?
+              </blockquote>
               <p>
-                With important issues like healthcare, employment and the
-                economy, you may be wondering why your social media habits are
-                so important. Does it really matter if you share something that
-                turns out to be not true?
+                Good questions to ask. Look, right now, we’re all seeing science
+                happen in real time. Scientists are learning more about this
+                virus every day. A new discovery today can change what every
+                scientist knew yesterday.
               </p>
               <p>
-                It does. A lot.
-              </p>
-              <p>
-                Sharing bad information about health issues may lead others to
-                do things that can cause real harm. People have died from taking
-                things they were told were cures for COVID-19. 
-              </p>
-              <p>
-                Not all incorrect info is dangerous, but it creates clutter and
-                makes it more diﬃcult for the good stuﬀ to get through.
-              </p>
-              <p>
-                Your health, and the health of those you care about, matters.
+                When most experts agree, based on the evidence, that something
+                is true, the scientific consensus changes and public health
+                authorities adapt their advice to reflect it. That doesn’t mean
+                they were wrong before, just that the scientific consensus they
+                were working from has changed.
               </p>
             </div>
           </li>
@@ -380,8 +509,50 @@
                 <span class="text-break section__line-two">What can I do?</span>
                 <span class="popup__icon"></span>
               </label>
-              <div class="popup__container">
-                <p>High I'm a popup</p>
+              <div id="popup-what-can-i-do" class="popup__container">
+                <div class="component__block">
+                  <h2 class="h2">
+                    I want to help. What can I do?
+                  </h2>
+                  <p>
+                    Researchers found that during a pandemic reducing bad
+                    information by just 10% has a signiﬁcant impact on how severe
+                    the pandemic is. You can make a real difference:
+                  </p>
+                  <ol>
+                    <li>
+                      Share responsibly. Check ﬁrst, share after.
+                    </li>
+                    <li>
+                      Call out false content when you see it.
+                    </li>
+                    <li>
+                      Help us educate as many people as possible about the dangers
+                      of misinformation.
+                    </li>
+                  </ol>
+                </div>
+
+                <div class="component__block component__block--50">
+                  <h3 class="h3">
+                    Help us spread the word!
+                  </h3>
+                  <p>
+                    Help yourself to these <a href="#">shareable images and videos</a>
+                    and help us spread the word.
+                  </p>
+                </div>
+                <div class="component__block  component__block--50">
+                  <h3 class="h3">
+                    <span class="text-break">Are you a content creator?</span>
+                    <span class="text-break">Download the share button and use it on your site</span>
+                  </h3>
+                  <p>
+                    One of the best ways to promote responsible sharing is when people
+                    are in the actual process of sharing. Our custom share buttons
+                    provide an unobtrusive reminder to check first, share after.
+                  </p>
+                </div>
               </div>
             </li>
             <li class="popup__item">
@@ -392,8 +563,23 @@
                 <span class="text-break section__line-two">with resources</span>
                 <span class="popup__icon"></span>
               </label>
-              <div class="popup__container">
-                <p>High I'm a popup</p>
+              <div id="popup-search-engine" class="popup__container">
+                <div class="component__block">
+                  <h2 class="h2">
+                    I need a search engine with resources.
+                  </h2>
+                  <p>
+                    Cut through the noise. Get just the good stuff.
+                  </p>
+                  <p>
+                    Search engines are wonderful at ﬁnding a ton information but
+                    they definitely don’t fact check every source. So, we did it
+                    for you! This search engine limits its ﬁndings to trusted
+                    expert sources. Use it to ﬁnd trusted content. [embedded
+                    custom Google search bar:
+                    http://bit.ly/public-health-canada]
+                  </p>
+                </div>
               </div>
             </li>
             <li class="popup__item">
@@ -404,8 +590,12 @@
                 <span class="text-break section__line-two">deep dive</span>
                 <span class="popup__icon"></span>
               </label>
-              <div class="popup__container">
-                <p>High I'm a popup</p>
+              <div id="popup-deep-dive" class="popup__container">
+                <div class="component__block">
+                  I want to do a deep dive.
+                  Educators, academics and those who just want to learn more can do it right here.
+                  We’re proud to partner with Timothy Caulﬁeld and the University of Alberta’s Health and Law Institute to provide these additional resources.  [links to separate page]
+                </div>
               </div>
             </li>
           </ul>
@@ -497,7 +687,7 @@
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
+    ga('create', 'UA-12080546-4', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
