Creates about campaign page.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="shortcut icon" href="https://mediasmarts.ca/sites/default/themes/mediasmarts/favicon.ico" type="image/vnd.microsoft.icon" />
-  <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
@@ -602,12 +601,12 @@
         <div class="component__block menu-container">
           <ul class="list list--menu">
             <li class="menu__item">
-              <a href="" class="menu__item__link">
+              <a href="about.html" class="menu__item__link">
                 About the Campaign
               </a>
             </li>
             <li class="menu__item">
-              <a href="" class="menu__item__link">
+              <a href="about.html#campaign-partners" class="menu__item__link">
                 Campaign Partners
               </a>
             </li>
@@ -654,7 +653,7 @@
 
     <footer class="footer">
       <div class="component">
-        <h2 class="h2 text-align-center">
+        <h2 class="h4 text-light text-align-center">
           This campaign wouldn’t be possible without the generosity of our sponsors:
         </h2>
         <ul class="list list--flex list--center">
