updates and last couple links.

--- a/index.html
+++ b/index.html
@@ -265,85 +265,85 @@
                 <li>
                   <p>
                     Trust info from official government sites like
-                    <a class="text-white" href="https://www.canada.ca/en/public-health/services/diseases/coronavirus-disease-covid-19.html">canada.ca/coronavirus</a>.
+                    <a class="text-white link" href="https://www.canada.ca/en/public-health/services/diseases/coronavirus-disease-covid-19.html">canada.ca/coronavirus</a>.
                   </p>
                 </li>
                 <li>
                   <p>
                     Trust info from public health agencies, including the <a
-                    class="text-white"
+                    class="text-white link"
                     href="https://www.canada.ca/en/public-health.html">Public
                     Health Agency of Canada</a>, your municipal health agency,
                     or your province or territory’s public health agency:
                   </p>
                   <ul class="list list--bullet">
                     <li>
-                      <a class="text-white" href="https://www.canada.ca/en/public-health.html">
+                      <a class="text-white link" href="https://www.canada.ca/en/public-health.html">
                         Public Health Agency of Canada
                       </a>
                     </li>
                     <li>
-                      <a class="text-white" href="https://www.alberta.ca/office-of-the-chief-medical-officer-of-health.aspx">
+                      <a class="text-white link" href="https://www.alberta.ca/office-of-the-chief-medical-officer-of-health.aspx">
                         Alberta Chief Medical Oﬃcer
                       </a>
                     </li>
                     <li>
-                      <a class="text-white" href="http://covid-19.bccdc.ca/">
+                      <a class="text-white link" href="http://covid-19.bccdc.ca/">
                         British Columbia Centre for Disease Control
                       </a>
                     </li>
                     <li>
-                      <a class="text-white" href="https://www.gov.mb.ca/covid19/index.html">
+                      <a class="text-white link" href="https://www.gov.mb.ca/covid19/index.html">
                         Manitoba COVID-19 page
                       </a>
                     </li>
                     <li>
-                      <a class="text-white" href="https://www2.gnb.ca/content/gnb/en/departments/ocmoh.html">
+                      <a class="text-white link" href="https://www2.gnb.ca/content/gnb/en/departments/ocmoh.html">
                         New Brunswick Chief Medical Oﬃcer of Public Health
                       </a>
                     </li>
                     <li>
-                      <a class="text-white" href="https://www.gov.nl.ca/covid-19/">
+                      <a class="text-white link" href="https://www.gov.nl.ca/covid-19/">
                         Newfoundland and Labrador COVID-19 page
                       </a>
                     </li>
                     <li>
-                      <a class="text-white" href="https://novascotia.ca/coronavirus/">
+                      <a class="text-white link" href="https://novascotia.ca/coronavirus/">
                         Nova Scotia COVID-19 page
                       </a>
                     </li>
                     <li>
-                      <a class="text-white" href="https://www.hss.gov.nt.ca/en">
+                      <a class="text-white link" href="https://www.hss.gov.nt.ca/en">
                         Northwest Territories Health and Social Services
                       </a>
                     </li>
                     <li>
-                      <a class="text-white" href="https://www.gov.nu.ca/health">
+                      <a class="text-white link" href="https://www.gov.nu.ca/health">
                         Nunavut Department of Health
                       </a>
                     </li>
                     <li>
-                      <a class="text-white" href="https://www.publichealthontario.ca/">
+                      <a class="text-white link" href="https://www.publichealthontario.ca/">
                         Public Health Ontario
                       </a>
                     </li>
                     <li>
-                      <a class="text-white" href="https://www.princeedwardisland.ca/en/topic/covid-19">
+                      <a class="text-white link" href="https://www.princeedwardisland.ca/en/topic/covid-19">
                         Prince Edward Island COVID-19 page
                       </a>
                     </li>
                     <li>
-                      <a class="text-white" href="https://www.quebec.ca/en/health/">
+                      <a class="text-white link" href="https://www.quebec.ca/en/health/">
                         Quebec Health
                       </a>
                     </li>
                     <li>
-                      <a class="text-white" href="https://www.saskatchewan.ca/government/health-care-administration-and-provider-resources/treatment-procedures-and-guidelines/emerging-public-health-issues/2019-novel-coronavirus">
+                      <a class="text-white link" href="https://www.saskatchewan.ca/government/health-care-administration-and-provider-resources/treatment-procedures-and-guidelines/emerging-public-health-issues/2019-novel-coronavirus">
                         Saskatchewan COVID-19 page
                       </a>
                     </li>
                     <li>
-                      <a class="text-white" href="https://yukon.ca/en/health-and-wellness">
+                      <a class="text-white link" href="https://yukon.ca/en/health-and-wellness">
                         Yukon Health and Wellness
                       </a>
                     </li>
@@ -353,7 +353,7 @@
                   <p>
                     Reputable news sources are almost always reliable, but take
                     the time to confirm the story is accurate by checking other
-                    sources. Visit <a class="text-white"
+                    sources. Visit <a class="text-white link"
                     href="http://www.breakthefake.ca/">breakthefake.ca</a> to
                     find out how.
                   </p>
@@ -1078,22 +1078,22 @@
               </label>
               <ul class="toggle-menu__content">
                 <li>
-                  <a class="link "href="">
+                  <a class="link "href="https://mediasmarts.ca/digital-media-literacy/e-tutorials/break-fake-how-tell-what%E2%80%99s-true-online">
                     Break the Fake <strong>workshop</strong>
                   </a>
                 </li>
                 <li>
-                  <a class="link "href="">
+                  <a class="link "href="https://mediasmarts.ca/search/break%20the%20fake?f%5B0%5D=type%3Alesson_plan">
                     Break the Fake <strong>lesson plans</strong>
                   </a>
                 </li>
                 <li>
-                  <a class="link "href="">
+                  <a class="link "href="https://mediasmarts.ca/teacher-resources/break-fake-how-tell-whats-true-online">
                     Break the Fake <strong>fact-checking tips</strong>
                   </a>
                 </li>
                 <li>
-                  <a class="link "href="">
+                  <a class="link "href="https://mediasmarts.ca/break-fake-printable-posters-bookmarks">
                     Break the Fake <strong>posters and bookmarks</strong>
                   </a>
                 </li>
@@ -1112,16 +1112,24 @@
         </h2>
         <ul class="list list--flex list--center">
           <li>
-            <img src="assets/exports/bellmedia.png" alt="Bell Media" />
+            <a href="https://www.bellmedia.ca/">
+              <img src="assets/exports/bellmedia.png" alt="Bell Media" />
+            </a>
           </li>
           <li>
-            <img src="assets/exports/corus.png" alt="corus" />
+            <a href="https://www.corusent.com/">
+              <img src="assets/exports/corus.png" alt="corus" />
+            </a>
           </li>
           <li>
-            <img src="assets/exports/facebook.png" alt="Facebook" />
+            <a href="http://www.facebook.com/">
+              <img src="assets/exports/facebook.png" alt="Facebook" />
+            </a>
           </li>
           <li>
-            <img src="assets/exports/canada-logo.png" alt="Funded by the Government of Canada" />
+            <a href="https://www.canada.ca/en.html">
+              <img src="assets/exports/canada-logo.png" alt="Funded by the Government of Canada" />
+            </a>
           </li>
         </ul>
       </div>
