updates to build based on client comments.

--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
-  <title>We need a title for the page</title>
+  <title>About the Campaign</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -121,17 +121,23 @@
           ">
           <div class="component__block">
             <h2 class="h2">
-              Campaing partners.
+              Campaign partners.
             </h2>
             <ul class="list list--flex partners-list">
               <li>
-                <img src="assets/exports/ualberta.png" alt="University of Alberta Faculty of Law Health Law Institute" />
+                <a href="https://www.ualberta.ca/health-law-institute">
+                  <img src="assets/exports/ualberta.png" alt="University of Alberta Faculty of Law Health Law Institute" />
+                </a>
               </li>
               <li>
-                <img src="assets/exports/journalism-foundation.png" alt="The Canadian Journalism Foundation" />
+                <a href="http://cjf-fjc.ca/">
+                  <img src="assets/exports/journalism-foundation.png" alt="The Canadian Journalism Foundation" />
+                </a>
               </li>
               <li>
-                <img src="assets/exports/canadian-citizenship.png" alt="Institute for Canadian Citizenship" />
+                <a href="https://www.inclusion.ca/">
+                  <img src="assets/exports/canadian-citizenship.png" alt="Institute for Canadian Citizenship" />
+                </a>
               </li>
             </ul>
             <a class="backlink" href="index.html" alt="back to campaign">
