--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </h2>
         </div>
         <div id='section-intro-2' class="component__block">
-          <img src="assets/exports/header-image.png" alt="" />
+          <img class="responsive-image" src="assets/exports/header-image.png" alt="" />
         </div>
         <div id='section-intro-3' class="component__block">
           <a class="link" href="#section-check-first">
@@ -171,16 +171,18 @@
             <span class="text-break">Share this content with those</span>
             <span class="text-break">you care about.</span>
           </h2>
-          <div class="video-responsive">
-            <iframe width="960" height="540" src="https://www.youtube.com/embed/H4inIGNEYZw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+          <div class='iframe-container'>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/H4inIGNEYZw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
+
         </div>
-        <!-- <div class="component__block component__block--50">
+        <div class="component__block component__block--50">
           <h3 class="h3">
             Help us spread the word!
           </h3>
           <p>
-            Help yourself to these <a class="link" href="#">shareable images and videos</a>
+            Help yourself to these <a class="link" href="https://mediasmarts.ca/covid-spread-the-word">shareable images and videos</a>
             and help us spread the word.
           </p>
         </div>
@@ -194,7 +196,7 @@
             are in the actual process of sharing. Our custom share buttons
             provide an unobtrusive reminder to check first, share after.
           </p>
-        </div> -->
+        </div>
       </div>
       <!-- /share this content -->
 
@@ -562,7 +564,7 @@
                       Help us spread the word!
                     </h3>
                     <p>
-                      Help yourself to these <a class="link" href="#">shareable images and videos</a>
+                      Help yourself to these <a class="link" href="https://mediasmarts.ca/covid-spread-the-word">shareable images and videos</a>
                       and help us spread the word.
                     </p>
                   </div>
@@ -601,8 +603,7 @@
                     Search engines are wonderful at ﬁnding a ton information but
                     they definitely don’t fact check every source. So, we did it
                     for you! This search engine limits its ﬁndings to trusted
-                    expert sources. Use it to ﬁnd trusted content. [embedded
-                    custom Google search bar:
+                    expert sources. Use it to ﬁnd trusted content.
                   </p>
 
                   <ul id="search-list" class="list list--flex">
@@ -1056,7 +1057,7 @@
                         </li>
                         <li>
                           <p>
-                            <a href="">Articles and resources for parents</a>
+                            <a href="https://mediasmarts.ca/digital-media-literacy/digital-issues/authenticating-information/resources-parents-authenticating-information">Articles and resources for parents</a>
                           </p>
                         </li>
                       </ul>
