translation and finial push.

--- a/propos.html
+++ b/propos.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="fr">
 
 <head>
   <meta charset="utf-8">
-  <title>About the Campaign</title>
+  <title>Au sujet de la campaign.</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -25,7 +25,7 @@
     <!-- header -->
     <header class="site-header">
       <a href="https://mediasmarts.ca/" title="Home page" class="site-header__logo">
-        <img class="site-logo image-style-none" src="https://mediasmarts.ca/sites/default/themes/mediasmarts/logo.png" alt="MediaSmarts">
+        <img class="site-logo image-style-none" src="https://habilomedias.ca/sites/default/themes/mediasmarts/logo_fr.png" alt="MediaSmarts">
       </a>
 
       <ul class="list list--flex list--right list--pad-half site-header__social-list">
@@ -54,8 +54,8 @@
           </a>
         </li>
         <li class="lang-link">
-          <a href="propos.html" title="Home page" class="link">
-            <span lang="fr">Français</span>
+          <a href="about.html" title="Home page" class="link">
+            <span lang="en">English</span>
           </a>
         </li>
       </ul>
@@ -74,43 +74,46 @@
           ">
           <div class="component__block component__block--left">
             <h1 class="h1">
-              <span class="text-break">About the</span>
-              <span class="text-break">campaign.</span>
+              <span class="text-break">Au sujet de</span>
+              <span class="text-break">la campaign.</span>
             </h1>
             <h2 class="h2">
-              <span class="text-break">Way to go! You checked</span>
-              <span class="text-break">to see if we were legit.</span>
+              <span class="text-break">Bravo! Vous avez vérifié </span>
+              <span class="text-break">qui nous étions.</span>
             </h2>
             <p>
-              (Don’t stop here! You can also check what other reliable sources
-              are saying: search “MediaSmarts” in your browser to find out more
-              about us.)
+              (Ne vous arrêtez pas là! Vous pouvez aussi vérifier ce que disent
+              d’autres sources : faites une recherche sur « HabiloMédias » dans
+              votre navigateur pour en apprendre davantage à notre sujet.)
             </p>
             <p>
-              “Check First. Share After” is a campaign dedicated to stopping the
-              spread of misinformation during COVID-19, created by MediaSmarts
-              in partnership with the University of Alberta’s Health Law
-              Institute with the support of the Government of Canada and media
-              partners including Bell Media, Corus, Facebook, and others.
+              La campagne « Vérifiez avant de partager » vise à stopper la
+              désinformation pendant la pandémie de la COVID-19. Elle a été
+              créée par HabiloMédias en partenariat avec le Health Law Institute
+              de l’Université de l’Alberta, avec le soutien du gouvernement du
+              Canada et de partenaires médiatiques, comme Bell Média, Corus et
+              Facebook.
             </p>
 
-            <a class="backlink link" href="index.html" alt="back to campaign">
-              <span class="backlink-icon"></span> Back to the Campaign.
+            <a class="backlink link" href="fr.html" alt="back to campaign">
+              <span class="backlink-icon"></span> Retour à la campagne.
             </a>
           </div>
           <div class="component__block component__block--right">
-            <img class="mediasmarts-notag" src="assets/exports/mediasmarts-notag.png" alt="Media Smarts" />
+            <img class="mediasmarts-notag" src="assets/exports/mediasmarts-notag-fr.png" alt="Media Smarts" />
             <p>
-              MediaSmarts is Canada’s centre for digital and media literacy. For
-              the past 25 years MediaSmarts, a registered charity, has advanced
-              digital and media literacy in Canadian schools, homes and
-              communities, developed and delivered high-quality Canadian-based
-              digital and media literacy programs and resources, and conducted
-              and disseminated research that contributes to the development of
-              informed public policy on issues related to media.
+              HabiloMédias est le centre canadien d’éducation aux médias et de
+              littératie numérique. Depuis 25 ans, HabiloMédias, un organisme de
+              bienfaisance enregistré, fait avancer l’éducation aux médias et la
+              littératie numérique dans les écoles, les foyers et les
+              communautés du Canada, élabore et offre des ressources et des
+              programmes canadiens d’éducation aux médias et de littératie
+              numérique de grande qualité, et mène et publie des recherches qui
+              contribuent à l’élaboration de politiques publiques éclairées sur
+              des enjeux liés aux médias.
             </p>
             <p>
-              Read <a class="link" href="https://mediasmarts.ca/about-us">more about us here</a>.
+              <a class="link" href="https://habilomedias.ca/qui-nous-sommes">Pour en savoir plus sur nous, cliquez ici.</a>.
             </p>
           </div>
         </div>
@@ -126,7 +129,7 @@
           ">
           <div class="component__block">
             <h2 class="h2">
-              Campaign partners.
+              Partenaires de campagne.
             </h2>
             <ul class="list list--flex partners-list">
               <li>
@@ -145,8 +148,8 @@
                 </a>
               </li>
             </ul>
-            <a class="backlink" href="index.html" alt="back to campaign">
-              <span class="backlink-icon"></span> Back to the Campaign.
+            <a class="backlink link" href="fr.html" alt="back to campaign">
+              <span class="backlink-icon"></span> Retour à la campagne.
             </a>
           </div>
         </div>
@@ -156,7 +159,7 @@
     <footer class="footer">
       <div class="component">
         <h2 class="h4 text-light text-align-center">
-          This campaign wouldn’t be possible without the generosity of our sponsors:
+          Cette campagne ne serait pas possible sans la générosité des commanditaires suivants :
         </h2>
         <ul class="list list--flex list--center">
           <li>
