--- a/fr.html
+++ b/fr.html
@@ -649,7 +649,7 @@
                       <h4 class="h4 text-align-center">
                         Recherche des agences de santé publique locales et nationales :
                       </h4>
-                      <script async src="https://cse.google.com/cse.js?cx=009843066196008418578:x4odwiy9ony"></script>
+                      <script async src="https://cse.google.com/cse.js?cx=009843066196008418578:vakrh2oa9ok"></script>
                       <div class="gcse-search"></div>
                     </li>
                   </ul>
