Updates based on client feedback: - moved deep dive to new page. - updated popup sizes - added zip file for sharing buttons - etc...

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
           </a>
         </li>
         <li class="lang-link">
-          <a href="propos.html" title="Home page" class="link">
+          <a href="propos.html" title="Propos" class="link">
             <span lang="fr">Français</span>
           </a>
         </li>
