--- a/propos.html
+++ b/propos.html
@@ -54,7 +54,7 @@
           </a>
         </li>
         <li class="lang-link">
-          <a href="about.html" title="Home page" class="link">
+          <a href="about.html" title="About" class="link">
             <span lang="en">English</span>
           </a>
         </li>
